dependent_vect/tests/safety/collect.stderr
error[E0283]: type annotations needed: cannot resolve `_: dependent_nat::timestamped::nat::Nat`
  --> $DIR/collect.rs:4:13
   |
4  |     let _ = collect(vec![]);
   |             ^^^^^^^
   | 
  ::: $WORKSPACE/dependent_vect/src/lib.rs:25:32
   |
25 | pub fn collect<Item: Clone, N: Nat, N2: Nat + From<N>, I: IntoIterator<Item = Item>>(
   |                                --- required by this bound in `dependent_vect::collect`

error[E0283]: type annotations needed: cannot resolve `_: std::convert::From<test_2::N>`
  --> $DIR/collect.rs:9:9
   |
9  |     v = collect(vec![1]).1;
   |         ^^^^^^^
   | 
  ::: $WORKSPACE/dependent_vect/src/lib.rs:25:47
   |
25 | pub fn collect<Item: Clone, N: Nat, N2: Nat + From<N>, I: IntoIterator<Item = Item>>(
   |                                               ------- required by this bound in `dependent_vect::collect`
